--- a/src/style/page/Collapse.scss
+++ b/src/style/page/Collapse.scss
@@ -11,15 +11,14 @@
 
 }
 
-
 .collapse__dropdown__container {
-  width: 100%;
-  margin-bottom: 10px;
+  width: 70%;
+  padding-bottom: 10px;
+  margin: auto;
 }
 
-.collapse__dropdown__title {
+.collapse {
   background: rgba(255, 96, 96, 1);
-
   color: white;
   padding: 15px;
   font-size: 18px;
@@ -29,32 +28,40 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   border-radius: 5px;
   transition: background 0.3s ease-in-out;
+  cursor: pointer;
 }
 
-.collapse__dropdown__title:hover {
-  background-color: #ff4b4b;
+
+
+.collapse__arrow {
+  width: 24px;
+  height: 24px;
+  transition: transform 0.3s ease-in-out; 
+  cursor: pointer;
 }
 
-.collapse__icon {
-  transition: transform 0.3s ease;
+
+.collapse__arrow.arrow_up {
+  transform: rotate(-180deg);
 }
 
-.collapse__icon.open {
-  transform: rotate(180deg);
+
+.collapse.open .collapse__arrow.arrow_down{
+  transform: rotate(180deg); 
 }
 
-.collapse__dropdown__content {
+.collapsible-content {
   background-color: white;
   padding: 0 15px;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.3s ease-in-out, padding 0.3s ease-in-out;
+  transition: max-height 3s ease-in-out, padding 3s ease-in-out;
 }
 
-.collapse__dropdown__content.open {
+
+.collapsible-content.open {
   max-height: 150px;
   padding: 10px 15px;
 }
@@ -63,11 +70,36 @@ i {
   font-size: 18px;
   cursor: pointer;
 }
+.hogar__details{
+  display: flex;
+max-width: 1240px;
+margin:auto;
+gap: 80px;
+}
+.hogar__details .collapse__dropdown__container{
+margin: 0;
+   padding-right: 30px;
+  
+  }
+  
 
-/* Responsive styles for max-width 768px */
+/* ✅ Responsive styles pour écrans de max 768px */
 @media (max-width: 768px) {
   .collapse__container {
     width: 100%;
     padding: 0 30px 0 0;
   }
+  .collapse__dropdown__container {
+    width: 100%;
+}
+.hogar__details{
+  flex-direction: column;
+  gap: 15px;
+  
+}
+.hogar__details .collapse__dropdown__container{
+ width: auto;
+    
+    }
+    
 }
